--- a/sales_store_prediction.ipynb
+++ b/sales_store_prediction.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "cf77f3a3",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# QUESTÃO DE NEGÓCIO\n",
     "\n",
@@ -13,20 +15,23 @@
   {
    "cell_type": "markdown",
    "id": "7eb8fa04",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# 0.0 IMPORTS"
+    "# 0.0 Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "9489ce7e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:39.318458Z",
-     "start_time": "2023-05-08T12:52:39.313237Z"
-    }
+     "end_time": "2023-05-09T15:52:57.653483Z",
+     "start_time": "2023-05-09T15:52:56.346024Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -43,20 +48,23 @@
   {
    "cell_type": "markdown",
    "id": "2e58192a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 0.1 Helper Fuctions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "67449536",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:39.911778Z",
-     "start_time": "2023-05-08T12:52:39.897540Z"
-    }
+     "end_time": "2023-05-09T15:52:57.658433Z",
+     "start_time": "2023-05-09T15:52:57.655049Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -78,13 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "3de918be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:40.236703Z",
-     "start_time": "2023-05-08T12:52:40.219579Z"
-    }
+     "end_time": "2023-05-09T15:52:57.684673Z",
+     "start_time": "2023-05-09T15:52:57.659439Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -115,20 +124,23 @@
   {
    "cell_type": "markdown",
    "id": "c48ecaba",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 0.2 Loading Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "cfc8050e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:41.872625Z",
-     "start_time": "2023-05-08T12:52:40.768957Z"
-    }
+     "end_time": "2023-05-09T15:52:58.386447Z",
+     "start_time": "2023-05-09T15:52:57.685983Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -141,13 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "1da19c17",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:41.887932Z",
-     "start_time": "2023-05-08T12:52:41.874774Z"
+     "end_time": "2023-05-09T15:52:58.399415Z",
+     "start_time": "2023-05-09T15:52:58.388595Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -311,7 +324,7 @@
        "4      5          5  2015-07-31   4822        559     1      1            0              1         a          a              29910.0                        4.0                    2015.0       0              NaN              NaN              NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,20 +336,23 @@
   {
    "cell_type": "markdown",
    "id": "cdf4f181",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 1.0 Descrição dos Dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "7e5db40f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:42.134823Z",
-     "start_time": "2023-05-08T12:52:41.890569Z"
-    }
+     "end_time": "2023-05-09T15:52:58.549850Z",
+     "start_time": "2023-05-09T15:52:58.400534Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -346,20 +362,23 @@
   {
    "cell_type": "markdown",
    "id": "2bb582a9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.1 Rename Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "51d8766a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:42.141841Z",
-     "start_time": "2023-05-08T12:52:42.137829Z"
-    }
+     "end_time": "2023-05-09T15:52:58.553515Z",
+     "start_time": "2023-05-09T15:52:58.550834Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -373,7 +392,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,13 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "36dfea94",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:42.189837Z",
-     "start_time": "2023-05-08T12:52:42.185824Z"
-    }
+     "end_time": "2023-05-09T15:52:58.557026Z",
+     "start_time": "2023-05-09T15:52:58.554370Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -407,20 +427,23 @@
   {
    "cell_type": "markdown",
    "id": "e3760aee",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.2 Data Dimensions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "beea9cf4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:42.361473Z",
-     "start_time": "2023-05-08T12:52:42.355465Z"
-    }
+     "end_time": "2023-05-09T15:52:58.559996Z",
+     "start_time": "2023-05-09T15:52:58.558096Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -440,20 +463,23 @@
   {
    "cell_type": "markdown",
    "id": "4cdf2136",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.3 Data Types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "80002a85",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:52:42.657441Z",
-     "start_time": "2023-05-08T12:52:42.524153Z"
-    }
+     "end_time": "2023-05-09T15:52:58.638735Z",
+     "start_time": "2023-05-09T15:52:58.561359Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -480,7 +506,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,20 +520,23 @@
   {
    "cell_type": "markdown",
    "id": "0b6002be",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.4 Check NA's"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "0d1c7705",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:33.224182Z",
-     "start_time": "2023-05-08T12:52:42.695387Z"
+     "end_time": "2023-05-09T15:53:25.843317Z",
+     "start_time": "2023-05-09T15:52:58.639904Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -539,20 +568,23 @@
   {
    "cell_type": "markdown",
    "id": "3c9fb92d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.6 Change types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "94be6651",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:33.240771Z",
-     "start_time": "2023-05-08T12:53:33.226465Z"
-    }
+     "end_time": "2023-05-09T15:53:25.854643Z",
+     "start_time": "2023-05-09T15:53:25.844442Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -566,20 +598,23 @@
   {
    "cell_type": "markdown",
    "id": "ea4790aa",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 1.7 Descriptive Statistical"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "5b083195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:33.461728Z",
-     "start_time": "2023-05-08T12:53:33.242381Z"
-    }
+     "end_time": "2023-05-09T15:53:25.979998Z",
+     "start_time": "2023-05-09T15:53:25.855873Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -593,20 +628,23 @@
   {
    "cell_type": "markdown",
    "id": "8210f6a1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### 1.7.1 Numerical attributes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "e41b8d61",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:33.739679Z",
-     "start_time": "2023-05-08T12:53:33.464495Z"
+     "end_time": "2023-05-09T15:53:26.168789Z",
+     "start_time": "2023-05-09T15:53:25.983168Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -630,23 +668,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "590da7bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:36.561605Z",
-     "start_time": "2023-05-08T12:53:33.741154Z"
+     "end_time": "2023-05-09T15:53:27.951147Z",
+     "start_time": "2023-05-09T15:53:26.169826Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fc4a227fb80>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb18a01db10>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -668,20 +707,23 @@
   {
    "cell_type": "markdown",
    "id": "cc74b088",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### 1.7.2 Categorical attributes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "77973bb7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:36.789800Z",
-     "start_time": "2023-05-08T12:53:36.563412Z"
-    }
+     "end_time": "2023-05-09T15:53:28.100802Z",
+     "start_time": "2023-05-09T15:53:27.952232Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -695,7 +737,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,13 +748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "a0546f8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:37.382006Z",
-     "start_time": "2023-05-08T12:53:36.791416Z"
-    }
+     "end_time": "2023-05-09T15:53:28.486113Z",
+     "start_time": "2023-05-09T15:53:28.101965Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -721,7 +764,7 @@
        "<Axes: xlabel='assortment', ylabel='sales'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -752,20 +795,23 @@
   {
    "cell_type": "markdown",
    "id": "49d71741",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 2.0 Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "2ef87064",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T12:53:37.661072Z",
-     "start_time": "2023-05-08T12:53:37.383829Z"
-    }
+     "end_time": "2023-05-09T15:53:28.642179Z",
+     "start_time": "2023-05-09T15:53:28.487190Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -775,19 +821,23 @@
   {
    "cell_type": "markdown",
    "id": "f31b87a0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 2.1 Mapa mental de hipoteses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e667144c",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-08T12:52:45.450Z"
-    }
+     "end_time": "2023-05-09T15:53:28.652407Z",
+     "start_time": "2023-05-09T15:53:28.643360Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -797,7 +847,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +859,9 @@
   {
    "cell_type": "markdown",
    "id": "df76b3cc",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 2.2 Lista final de hipoteses"
    ]
@@ -817,7 +869,9 @@
   {
    "cell_type": "markdown",
    "id": "41ece44d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "1. Lojas com maior sortimentos deveriam vender mais.\n",
     "2. Lojas com competidores mais próximos deveriam vender menos.\n",
@@ -836,20 +890,23 @@
   {
    "cell_type": "markdown",
    "id": "c1e90231",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 2.3 Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "f004a0a6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T13:32:27.588061Z",
-     "start_time": "2023-05-08T13:31:52.065972Z"
-    }
+     "end_time": "2023-05-09T15:53:49.381683Z",
+     "start_time": "2023-05-09T15:53:28.653497Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -882,12 +939,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e22aa7e0",
+   "cell_type": "markdown",
+   "id": "f68d9e87",
    "metadata": {},
+   "source": [
+    "# 3.0 Filtragem das Variáveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "04055703",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-09T15:53:49.605740Z",
+     "start_time": "2023-05-09T15:53:49.382912Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df3 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03a53b5",
+   "metadata": {},
+   "source": [
+    "## 3.1 Filtragem das linhas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a805728a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:12:09.663156Z",
+     "start_time": "2023-05-09T16:12:09.512151Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3 = df3[(df3['open'] != 0) & (df3['sales'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b2a605",
+   "metadata": {},
+   "source": [
+    "## 3.2 Seleção das colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "405efa3f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-09T16:12:23.558613Z",
+     "start_time": "2023-05-09T16:12:23.455957Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols_drop = ['customers', 'open', 'promo_interval', 'month_map']\n",
+    "df3 = df3.drop( cols_drop, axis=1 )"
+   ]
   }
  ],
  "metadata": {
